Swipe navigation does not work when kinetic scroll is disabled
Categories
(Core :: Widget: Gtk, defect, P3)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox105 | --- | verified |
People
(Reporter: heftig, Assigned: rzvncj)
References
Details
Attachments
(1 file)
I disable kinetic scrolling by turning off apz.gtk.kinetic_scroll.enabled, as without hold gestures, kinetic scrolling irritates me more than it helps.
Unfortunately, this also disables the swipe gestures added in bug 1539730. It would be nice if those were still available.
(Hold gestures are supported by GTK 4, but AFAIK aren't going to be backported to GTK 3.)
Updated•4 years ago
|
Updated•4 years ago
|
Comment 1•4 years ago
|
||
Currently, kinetic scrolling is tied to our "precision" touchpad event handling codepath (touchpad scroll events are turned into PanGestureInput). Setting apz.gtk.kinetic_scroll.enabled=false disables that codepath altogether (touchpad scroll events are turned into ScrollWheelInput). Swipe navigation requires PanGestureInput events.
We could decouple the two, and have a way to take the PanGestureInput codepath without triggering a fling animation at the end of a pan gesture.
We'd probably still want to have a way for users to opt into the ScrollWheelInput codepath, as the scrolling physics are a bit different there and some users might prefer it.
cc Razvan in case this sounds interesting to you
| Assignee | ||
Comment 2•3 years ago
|
||
Updated•3 years ago
|
Updated•3 years ago
|
Comment 4•3 years ago
|
||
| bugherder | ||
| Reporter | ||
Updated•3 years ago
|
| Assignee | ||
Comment 6•3 years ago
|
||
Happy to help!
Description
•