Bug 1781209 - Swipe navigation does not work when kinetic scroll is disabled. r=botond

Differential Revision: https://phabricator.services.mozilla.com/D154239